--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -6,3 +6,168 @@ Green: #00B172
 White: #FFF
 
 */
+
+body {
+    margin: 0;
+    padding: 0;
+}
+
+#main_image {
+    position: relative;
+}
+
+#header {
+    background-color: white;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    padding-bottom: 15px;
+}
+
+#logo {
+    position: absolute;
+    max-width: 17%;
+	height: auto;
+    top: 10px;
+    left: 10px;
+}
+
+nav ul {
+   display: flex;
+   flex-direction: row;
+   justify-content: flex-end;
+   list-style: none;
+}
+
+nav ul li {
+    padding: 10px;
+}
+
+#big_image {
+    display: flex;
+    align-items: ;
+}
+
+#landing {
+    max-width: 100%;
+    height: auto;
+}
+
+h1 {
+    position: absolute;
+    top: 300px;
+    left: 200px;
+    font-size: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+}
+
+h2 {
+    position: absolute;
+    top: 400px;
+    left: 200px;
+    font-size: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+}
+
+#center_content {
+    width: 100%;
+}
+
+#center_content h3 {
+    text-align: center;
+    font-size: 30px;
+    margin: 10px 500px;
+    padding-bottom: 10px;
+    border-bottom: solid 4px #00B172;
+}
+
+#icons_box {
+    padding-top: 40px;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+#icons_box img {
+    max-width: 100px;
+    align-content: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#icons_box h4  {
+    text-align: center;
+    color: #00B172;
+}
+
+#icons_box p {
+    text-align: center;
+}
+
+#green_box {
+    background: #00B172;
+    padding: 50px;
+    color: white;
+}
+
+#green_box h3 {
+    display: flex;
+    font-size: 28px;
+    font-weight: bold;
+    padding-bottom: 10px;
+    border-bottom: 2px solid white;
+    width: 30%;
+    margin-left: 40px;
+}
+
+#green_box ul {
+    display: flex;
+   flex-direction: column;
+   justify-content: space-between;
+   list-style: none;
+}
+
+#green_box ul li {
+    width: 200px;
+    height: auto;
+}
+
+#last_container {
+    width: 100%;
+   display: flex;
+   flex-direction: row; 
+   justify-content: space-between;
+}
+
+#last_container ul li h4 {
+    font-size: 22px;
+}
+
+#white_icon {
+    width: 120px;
+    height: auto;
+    margin: auto 20px;
+}
+
+#logo_spotify_container {
+    display: flex;
+    align-items: center;
+}
+
+#app_pic {
+    width: 60%;
+    height: auto;
+}
+
+#app_container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
